# idmefv2-connectors

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
doc/: HOWTO implement IDMEFv2.md  attachment-idmefv2.json  minimal-idmefv2.json  suricata-idmefv2.json
doc/code/cpp/HelloWorld/: CMakeLists.txt  README.md  main.cpp
doc/code/java/HelloWorld/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pom.xml
doc/code/java/HelloWorld/src/main/java/com/example/: App.java  IDMEFv2Client.java  IDMEFv2MessageBuilder.java
doc/code/java/HelloWorld/src/main/resources/: hello-world-idmefv2.json
doc/code/java/HelloWorld/src/test/java/com/example/: AppTest.java
doc/code/python/HelloWorld/: README.md  app.py  client.py  hello-world-idmefv2.json  message_builder.py  pyproject.toml
doc/code/python/HelloWorld/src/hello_world/: __init__.py  app.py  client.py  message_builder.py
idmefv2/connectors/: baseconnector.py  configuration.py  connector.py  converter.py  filetailer.py  idmefv2client.py  idmefv2client2.py  idmefv2funs.py  jsonconverter.py  jsonconverter_test.py  uuid.py
idmefv2/connectors/clamav/: README.md  __init__.py  __main__.py  clamav-idmefv2.sample.conf  clamavconverter.py  clamavconverter_test.py
idmefv2/connectors/elastalert2/: README.md  __init__.py  example_rule.yaml  idmefv2alerter.py
idmefv2/connectors/kismet/: README.md  __main__.py  kismet-idmefv2.sample.conf  kismetconverter.py  kismetconverter_test.py
idmefv2/connectors/modsecurity/: README.md  __init__.py  __main__.py  modsecurity-idmefv2.sample.conf  modsecurityconverter.py  modsecurityconverter_test.py
idmefv2/connectors/motion/: README.md  __init__.py  __main__.py  motion-idmefv2.conf  motion-idmefv2.sample.conf  motion2json.sh  motionconverter.py
idmefv2/connectors/prometheus/: README.md  __init__.py  __main__.py  poller.py  prometheus-idmefv2.sample.conf  prometheusconverter.py  prometheusconverter_test.py
idmefv2/connectors/samhain/: README.md  __main__.py  samhain-idmefv2.sample.conf  samhainconverter.py  samhainconverter_test.py  samhaintailer.py
idmefv2/connectors/suricata/: README.md  __init__.py  __main__.py  converter_test.py  eveserver.py  idmefv2_converter.py  server.py  suricata-idmefv2.conf.sample  suricata-idmefv2.sample.conf  suricataconverter.py  suricataconverter_test.py  zob.py
idmefv2/connectors/t-pot/: README.md  __init__.py  __main__.py  poller.py  tpot.sample.conf  tpotconverter.py  tpotconverter_test.py
idmefv2/connectors/tests/: jsonconverter_test.py
idmefv2/connectors/testserver/: README.md  __main__.py  httpserver.py  idmefv2.valid.json
idmefv2/connectors/wazuh/: README.md  __init__.py  __main__.py  wazuh-idmefv2.sample.conf  wazuhconverter.py  wazuhconverter_test.py
idmefv2/connectors/zabbix/: README.md  ZABBIX_WEBHOOK_SETUP_README.md  __init__.py  __main__.py  models.py  poller.py  push.py  zabbix-idmefv2.sample.conf  zabbixconverter.py  zabbixconverter_test.py  zabbixutil.py
idmefv2/connectors/zoneminder/: README.md  __init__.py  __main__.py  zm2json.sh  zoneminder-idmefv2.sample.conf  zoneminderconverter.py  zoneminderconverter_test.py
idmefv2/suricata/: __main__.py  converter.py  converter_test.py  idmefv2_converter.py  idmefv2_converter_test.py  server.py
idmefv2/suricata/tests/: converter_test.py
