[project]
name = "idmefv2-connectors"
version = "0.0.1"
dependencies = [
    'inotify',
    "jsonpath_ng",
    'pyyaml',
    'requests',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'idmefv2.connectors.suricata' = ["*.sample.conf"]
