[project]
name = "idmefv2-connectors"
dynamic = ["version"]
dependencies = [
    'inotify',
    "jsonpath_ng",
    'pyyaml',
    'requests',
]
requires-python = ">=3.10"
authors = [
  {name = "François Déchelle"},
  {name = "Emanuele Principato"},
]
description = "Various connectors for IDMEF v2"
readme = "README.md"
license = "Apache-2.0"
keywords = ["IDMEFv2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Monitoring"
]

[project.urls]
Homepage = "https://www.idmefv2.org"
Repository = "https://github.com/IDMEFv2/idmefv2-connectors"
"Bug Tracker" = "https://github.com/IDMEFv2/idmefv2-connectors/issues"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'idmefv2.connectors.suricata' = ["*.sample.conf"]
'idmefv2.connectors.zabbix' = ["*.sample.conf"]

[tool.setuptools_scm]
